Fixed spacing on /about and added Cardus and Convivum to /partners

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -351,7 +351,7 @@ ul.center {
 			font-size: 2em;
 			text-transform: uppercase;
 			line-height: 1.2em;
-			text-align: justify;
+			text-align: center;
 			text-align-last: center;
 			border-width: 0;
 			z-index: 3;
@@ -515,9 +515,9 @@ ul.center {
 		#page h2.margin-05 {
 			margin: 0em auto 0.5em auto;
 		}
-
-		#page h2.margin-top-05 {
-			margin: 0.5em auto;
+	
+		#page h2.margin-top-15 {
+			margin: 1.5em auto 0 auto;
 		}
 
 			#page h2.large {
@@ -688,7 +688,7 @@ ul.center {
 
 		#page blockquote {
 			width: 70%;
-			margin: 3em auto;
+			margin: 1em auto;
 		}
 
 			#page blockquote.margin-5 {
@@ -935,6 +935,7 @@ ul.center {
 				width: 80%;
 				margin: 0 auto;
 				padding: 0.5em 0;
+				font-weight: 300;
 				text-align: left;
 			}
 
@@ -1067,6 +1068,8 @@ ul.center {
 			font-size: 1em;
 			color: #343434;
 			vertical-align: top;
+			text-align: left;
+			text-align-last: left;
 		}
 
 		#mc_embed_signup label {
